--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -2,7 +2,15 @@ name: Events Demo 1
 on:
   pull_request:
     types: opened
+    branches:
+      - master
   workflow_dispatch:
+  push:
+    branches:
+      - master
+    paths-ignore:
+      - ".github/workflow/*"
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
