--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -9,7 +9,7 @@ on:
     branches:
       - master
     paths-ignore:
-      - ".github/workflow/*"
+      - ".github/workflow/*" #comment
 
 jobs:
   deploy:
